# HttpServer

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  build.sh  c10k.sh  config  config.txt  main.cpp
Resources/: index.html
docs/: Benchmark.md  CodingStyle.md  Database.md  HttpStatusHandling.md  QAs.md  README.md  TODOs.md
include/: Base64.hpp  Cache.hpp  Channel.hpp  CharacterSet.hpp  Character_Set.hpp  Client.hpp  ClientSocket.hpp  Client_Socket.hpp  Compressor.hpp  Connection.hpp  HtmlBuilder.hpp  IResourceHandler.hpp  ISocket.hpp  Logger.hpp  Master.hpp  MysqlHandler.hpp  Mysql_Handler.hpp  PercentEncoding.hpp  Percent_Encoding.hpp  ProcessPool.hpp  Request.hpp  ResourceHandler.hpp  Response.hpp  SHA1.hpp  Sentence.hpp  Server.hpp  ServerConfiguration.hpp  ServerSocket.hpp  Server_Socket.hpp  Sha1.hpp  SqliteHandler.hpp  StatusHandler.hpp  Status_Handler.hpp  ThreadPool.hpp  Thread_Pool.hpp  Timer.hpp  URI.hpp  UTF8.hpp  UnixDomainHelper.hpp  Uri.hpp  (+12 more)
notes/: problems.md  status_handling.md
public_html/: index.html  login_in.html  sign_up.html  sign_up_done.html
resource/: index.html
resource/assets/css/: HomePage.css  HomePageStype.css  SignUp.css
resource/assets/html/: SearchUser.html  SignUp.html
resource/assets/js/: AudioPlayer.js
scripts/: benchmark.py  build-db  c10k.sh  kill.py  kill.sh  monitor.sh  siege.sh
src/: .Status_Handler.cpp.swp  Base64.cpp  CMakeLists.txt  Cache.cpp  Channel.cpp  CharacterSet.cpp  Character_Set.cpp  Client.cpp  ClientSocket.cpp  Client_Socket.cpp  Compressor.cpp  Connection.cpp  HtmlBuilder.cpp  Logger.cpp  Master.cpp  MysqlHandler.cpp  Mysql_Handler.cpp  PercentEncoding.cpp  Percent_Encoding.cpp  ProcessPool.cpp  Request.cpp  ResourceHandler.cpp  Response.cpp  SHA1.cpp  Sentence.cpp  Server.cpp  ServerConfiguration.cpp  ServerSocket.cpp  Server_Socket.cpp  Sha1.cpp  SqliteHandler.cpp  StatusHandler.cpp  Status_Handler.cpp  ThreadPool.cpp  Thread_Pool.cpp  Timer.cpp  URI.cpp  UTF8.cpp  UnixDomainHelper.cpp  Uri.cpp  (+12 more)
test/: .Status_Handler_Test.cpp.swp  Base64Test.cpp  CMakeLists.txt  CacheTest.cpp  CharacterSetTest.cpp  Character_Set_Test.cpp  ClientTest.cpp  Client_Test.cpp  CompressorTest.cpp  ConnectionTest.cpp  HtmlBuilderTest.cpp  LoggerTest.cpp  Logger_Test.cpp  MasterTest.cpp  MysqlHandlerTest.cpp  Mysql_Handler_Test.cpp  PercentEncodingTest.cpp  Percent_Encoding_Test.cpp  ProcessPoolTest.cpp  RequestTest.cpp  Request_Test.cpp  ResourceHandlerTest.cpp  ResponseTest.cpp  Response_Test.cpp  SHA1_Test.cpp  SentenceTest.cpp  ServerConfigurationTest.cpp  ServerSocketTest.cpp  ServerTest.cpp  Server_Socket_Test.cpp  Server_Test.cpp  Sha1Test.cpp  SqliteHandlerTest.cpp  StatusHandlerTest.cpp  Status_Handler_Test.cpp  ThreadPoolTest.cpp  Thread_Pool_Test.cpp  TimerTest.cpp  Timer_Test.cpp  URI_Test.cpp  (+24 more)
test/Interface_Test/: CMakeLists.txt  Socket_Interface_Test.cpp
test/server_client_test/: CMakeLists.txt  SimpleClient.cpp  SimpleServer.cpp  echo_client.cpp  echo_server.cpp  simple_client.cpp  simple_server.cpp
